--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <html>
 <head>
 	<title></title>
+
+<style>
+	 boby{
+	 	background-color: red;
+	 }
+
+</style>
 </head>
 <body>welocme to github web page
 	today is monday.
