--- a/index.html
+++ b/index.html
@@ -8,11 +8,16 @@
 	 boby{
 	 	background-color: red;
 	 }
+	 h1{
+	 	text-align: center;
+	 	background-color: blue;
+	 	color: brown;
+	 }
 
 </style>
 </head>
 <body>welocme to github web page
 	today is monday.
-
+<h1>hello!</h1>
 </body>
 </html>
